# aurora-alarm

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
alarm-app/: Cargo.toml
alarm-app/src/: main.rs
alarm-core/: Cargo.toml
alarm-core/src/: api.rs  lib.rs  model.rs  schedule.rs  storage.rs
alarm-daemon/: Cargo.toml
alarm-daemon/src/: main.rs
packaging/appimage/: AppRun  build-appimage.sh
packaging/flatpak/: build-flatpak.sh  cargo-config.toml  io.codex.AuroraAlarm.yml
scripts/: package-release.sh
