[workspace]
members = ["alarm-core", "alarm-daemon", "alarm-app"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.2"
license = "MIT"
authors = ["OpenAI Codex"]
repository = "https://github.com/DhrubaDC1/aurora-alarm"
homepage = "https://github.com/DhrubaDC1/aurora-alarm"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
directories = "6.0"
ksni = { version = "0.3", features = ["blocking"] }
notify-rust = "4.12"
rodio = { version = "0.21", features = ["playback"] }
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "time", "sync"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
zbus = { version = "5.12", default-features = false, features = ["tokio"] }
