[package]
name = "alarm-daemon"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
alarm-core = { path = "../alarm-core" }
anyhow.workspace = true
chrono.workspace = true
notify-rust.workspace = true
rodio.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
zbus.workspace = true
